c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/extra_junk.c
int main(void)
{
    return 2;
}
// A single identifier outside of a declaration isn't a valid top-level construct
foo